syntax = "proto3";

package user;

option go_package = "api/proto/user";

message CreateUserReq {
  string name = 1;
  string username = 2;
  string password = 3;
  string createdId = 4;
  string updatedId = 5;
}

message UserRes {
  string id = 1;
  string name = 2;
  string username = 3;
  string password = 4;
  string createdId = 5;
  string updatedId = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message LoginRes {
  UserRes user = 1;
}

message UserPageRes {
  repeated UserRes list = 1;
  int32 total = 2;
}

message UserPageReq  {
  int32 current = 1;
  int32 pageSize = 2;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message FindByIdReq {
  string id = 1;
}

message ChangePasswordReq {
  string id = 1;
  string password = 2;
  string updatedId = 3;
}

message Success {
  bool success = 1;
}

service UserService {
  rpc UserPage (UserPageReq) returns (UserPageRes);
  rpc CreateUser (CreateUserReq) returns (UserRes);
  rpc Login (LoginReq) returns (LoginRes);
  rpc FindById (FindByIdReq) returns (UserRes);
  rpc ChangePassword (ChangePasswordReq) returns (Success);
}
